After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728996 - Caret cursor is not updated when jumping to a find result
Caret cursor is not updated when jumping to a find result
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-26 00:51 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-04-28 13:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (860 bytes, patch)
2014-04-26 00:51 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description Joanmarie Diggs (IRC: joanie) 2014-04-26 00:51:44 UTC
Created attachment 275186 [details] [review]
proposed patch

When jumping to a find result with caret navigation enabled, the view should update the cursor position.
Comment 1 Carlos Garcia Campos 2014-04-28 12:24:19 UTC
Review of attachment 275186 [details] [review]:

Ok
Comment 2 Joanmarie Diggs (IRC: joanie) 2014-04-28 13:00:27 UTC
Comment on attachment 275186 [details] [review]
proposed patch

Committed to master and the gnome-3-12 branch.

Thanks!