libview: Update the caret cursor when jumping to a find result

https://bugzilla.gnome.org/show_bug.cgi?id=728996